# nes-emu

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.cc  pch.hh
src/nes/: cpu.cc  cpu.hh  isa.hh  rom.cc  rom.hh  sram.cc  sram.hh
